--- a/CashTracker/CashTracker.csproj
+++ b/CashTracker/CashTracker.csproj
@@ -46,6 +46,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Serializer.cs" />
+    <Compile Include="ListViewItemData.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
